@@ -6,7 +6,10 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.attribute.PosixFilePermission;
+import java.nio.file.attribute.PosixFilePermissions;
 import java.util.Random;
+import java.util.logging.Logger;
 import java.util.stream.Stream;
 
 @Component
@@ -14,6 +17,7 @@ public class TemperatureMonitor {
 
 
     public static final String AIN1 = "AIN1";
+    private final Logger LOG = Logger.getLogger(getClass().getName());
     private Random random;
 
     public TemperatureMonitor() {
@@ -30,20 +34,40 @@ public class TemperatureMonitor {
         if (random != null) {
             return random.nextInt(40);
         }
-        Path path = Paths.get("/sys/devices/ocp.2/helper.14/" + port);
+
+        final Path path = Paths.get("/sys/devices/ocp.2/helper.14/" + port);
+        if(Files.notExists(path)) {
+            LOG.warning(() -> "LM35 Port not found: "+path);
+            return 0;
+        }
         try (Stream<String> lines = Files.lines(path)) {
-            return lines.limit(1)
+            int temp = lines.limit(1)
                     .mapToInt(Integer::parseInt)
                     .findFirst()
                     .orElse(0);
-        } catch (IOException e) {
+            return temp/10;
+        } catch (Exception e) {
             e.printStackTrace();
-            throw new RuntimeException(e);
+            return 0;
         }
     }
 
-    private static void runCommand(String cmd) throws IOException, InterruptedException {
-        Process p = Runtime.getRuntime().exec(cmd);
+    private void runCommand(String cmd) throws IOException, InterruptedException {
+        final Path tempFile = Files.createTempFile("outdoor-init-script", ".sh");
+        Files.write(tempFile, cmd.getBytes());
+        final String filePath = tempFile.toAbsolutePath().toString();
+
+        // Give execution permission to file
+        Process p = new ProcessBuilder("chmod", "777", filePath).start();
         p.waitFor();
+
+        // Execute shell
+        p = new ProcessBuilder("sh", filePath).start();
+        p.waitFor();
+
+        int exitValue = p.exitValue();
+        Files.deleteIfExists(tempFile);
+        LOG.info(() -> "Command ["+cmd+"] finished with exit value ["+ exitValue +"]");
     }
+
 }
